--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,11 @@
         p.links {
             margin-top: 20px;
         }
+    .chart-container canvas {
+        background-color: white; /* 或者 #fff / #f8f8f8 */
+        border: 1px solid #eaeaea;
+        margin-bottom: 40px;
+    }
     </style>
 </head>
 <body>
