--- a/templates/index.html
+++ b/templates/index.html
@@ -143,6 +143,9 @@
                                         color: 'white'
                                     }
                                 },
+                                chartArea: {
+                                    backgroundColor: '#f9f9f9'
+                                },
                                 scales: {
                                     x: {
                                         type: 'linear',
