--- a/templates/visitors.html
+++ b/templates/visitors.html
@@ -150,6 +150,7 @@
             <tr>
                 <td>{{ visitor.ip }}</td>
                 <td>{{ visitor.country }}</td>
+                <td>{{ visitor.region }}</td>
                 <td>{{ visitor.visit_time.strftime('%Y-%m-%d %H:%M:%S') }}</td>
                 <td>{{ visitor.query }}</td>
             </tr>
