--- a/templates/visitors.html
+++ b/templates/visitors.html
@@ -141,6 +141,7 @@
             <tr>
                 <th>IP Address</th>
                 <th>Country</th>
+                <th>Region</th>
                 <th>Visit Time (UTC)</th>
                 <th>Searched Genes</th>
             </tr>
